--- a/app/views/admin/top_page/show.html.erb
+++ b/app/views/admin/top_page/show.html.erb
@@ -1,1 +1,10 @@
 <h1>Admin page</h1>
+<div class="texty">
+  Specifies the header that your server uses for sending files.
+  config.action_dispatch.x_sendfile_header = 'X-Sendfile' # for Apache
+  config.action_dispatch.x_sendfile_header = 'X-Accel-Redirect' # for NGINX
+</div>
+
+<div class="img-responsive">
+  <%= image_tag "h2.jpg" %>
+</div>
