update env for rsync assets to development

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,9 +1,9 @@
 h1{
-  color: blue;
+  color: red;
 }
 
 body {
-  background-color: red;
+  background-color: green;
   .texty {
     width: 500px;
     height: 500px;
