--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
 <h1>hello world</h1>
 <hr/>
 <p>hiiiiiiiiiiiii</p>
+<div>
+  <a href="#" class="show-alert">Click me</a>
+</div>
 <div><%= image_tag "a1.jpg" %></div>
