--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <p class="text-right"><%= current_user.email if user_signed_in? %></p>
     <%= yield %>
   </body>
 </html>
