update envaironment variables on server

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <h1>hello world</h1>
 <hr/>
-<p>hiiiiiiiiiiiii</p>
+<p>It is very nice today !</p>
 <div>
   <a href="#" class="show-alert">Click me</a>
 </div>
